# MyServer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  run.bat
CommonBase/: CommomHelp.cpp  CommomHelp.h  Vector2.cpp  Vector2.h
GameEngine/: CMakeLists.txt  GEDateTime.cpp  GEDateTime.h  GEDefine.cpp  GEDefine.h  GELog.cpp  GELog.h  GENetPack.cpp  GENetPack.h  GENetWork.cpp  GENetWork.h  GEProcess.cpp  GEProcess.h  GEReadWrite.h  GESingleton.h  GESystemTime.cpp  GESystemTime.h  GSDefine.h  GameServer.cpp  GameServer.h  Head.h  LuaEngine.cpp  LuaEngine.h  LuaEvent.cpp  LuaEvent.h  LuaGameServer.cpp  LuaGameServer.h  SingleTon.h
GameEngine/GEID/: GEUID.cpp  GEUID.h
GameEngine/GENet/: GENetBuf.cpp  GENetBuf.h  GENetConnect.cpp  GENetConnect.h  GENetConnectMgr.cpp  GENetConnectMgr.h  GENetMessage.cpp  GENetMessage.h  GENetPack.cpp  GENetPack.h  GENetRecvBuf.cpp  GENetRecvBuf.h  GENetSendBuf.cpp  GENetSendBuf.h  GENetWork.cpp  GENetWork.h
GameServer/: CMakeLists.txt  GameServer.cpp  GameServer.h
GameServer/Lua/: LuaConst.h  LuaEngine.cpp  LuaEngine.h  LuaEvent.cpp  LuaEvent.h  LuaFunction.cpp  LuaFunction.h  LuaFunctionProxy.h  LuaGameServer.cpp  LuaGameServer.h  LuaInclude.h  LuaRole.cpp  LuaRole.h  LuaServerMsg.cpp  LuaServerMsg.h  LuaTick.cpp  LuaTick.h  LuaTickUID.h
GameServer/LuaTask/: LuaSubThread.h  LuaTask.h
LuaCode/Client/: GCInit.lua
LuaCode/Common/: CDefine.lua  Module.lua  Print.lua
LuaCode/Common/Game/: Function.lua  Message.lua
LuaCode/Common/Game/Role/: RoleClass.lua
LuaCode/GateWay/: GateWayInit.lua  GateWayLogic.lua
LuaCode/Logic/: LogicGateWay.lua  LogicInit.lua
LuaCode/Logic/Game/Role/: RoleData.lua  RoleMgr.lua
LuaCode/Server/: Allot.lua  GSConst.lua  GSDateTime.lua  GSEvent.lua  GSInit.lua  GSMessage.lua  GSTick.lua  PersistentBase.lua  PersistentData.lua  PersistentTable.lua  RoleData.lua  ServerPrint.lua
LuaCode/Server/MySQL/: Table.lua
LuaCode/ServerDB/: CreateTable.lua  PersistentBase.lua  PersistentData.lua  ReadMe.lua  RoleData.lua  ServerDBDefine.lua  ServerData.lua
LuaCode/World/: WorldInit.lua
Test/: Test.cpp  Test.h
Third/CLib/: Lua.lib  libboost_chrono-vc142-mt-s-x64-1_73.lib  libboost_chrono-vc142-mt-x64-1_73.lib  libboost_date_time-vc142-mt-s-x64-1_73.lib  libboost_date_time-vc142-mt-x64-1_73.lib  libboost_filesystem-vc142-mt-s-x64-1_73.lib  libboost_filesystem-vc142-mt-x64-1_73.lib  libboost_system-vc142-mt-s-x64-1_73.lib  libboost_system-vc142-mt-x64-1_73.lib  libboost_thread-vc142-mt-s-x64-1_73.lib  libboost_thread-vc142-mt-x64-1_73.lib  libboost_timer-vc142-mt-s-x64-1_73.lib  libboost_timer-vc142-mt-x64-1_73.lib
Third/Include/: pyconfig.h  说明.txt
Third/Include/Lua/: Makefile  lfs.c  linit.c  lua.h  lualib.h  luapack.c  luapack.h  luasql.h  pb.c
Third/Include/LuaBridge/: CMakeLists.txt
Third/Include/MySQL/: config-win.h  my_config.h
Third/Include/Python/: pyconfig.h
Tools/: run.bat
