AUX_SOURCE_DIRECTORY(. GAME_ENGINE_SRCS)
ADD_LIBRARY ( GAME_ENGINE ${GAME_ENGINE_SRCS})

AUX_SOURCE_DIRECTORY(./GENet GENET_SRCS)
ADD_LIBRARY ( GENET ${GENET_SRCS})

AUX_SOURCE_DIRECTORY(./GEID GEID_SRCS)
ADD_LIBRARY ( GEID ${GEID_SRCS})

#AUX_SOURCE_DIRECTORY(./GEThread GETHREAD_SRCS)
#ADD_LIBRARY ( GETHREAD ${GETHREAD_SRCS})